docs/versions/v7.0.0/guides/index.md
---
title: Guides
old_permalink: /versions/v7.0.0/guides/index.html
previous___FILE: ./../introduction/community.md
next___FILE: ./up-and-running.md
---

-   [Up and Running](/versions/v7.0.0/guides/up-and-running)
    -   [Create an account](/versions/v7.0.0/guides/up-and-running#create-an-account)
    -   [Creating the project](/versions/v7.0.0/guides/up-and-running#creating-the-project)
    -   [Open the app on your phone or simulator](/versions/v7.0.0/guides/up-and-running#open-the-app-on-your-phone-or-simulator)
-   [Configuration with exp.json](/versions/v7.0.0/guides/configuration)
-   [Viewing Logs](/versions/v7.0.0/guides/logging)
    -   [Recommended: View logs with Exponent tools](/versions/v7.0.0/guides/logging#recommended-view-logs-with-exponent-tools)
    -   [Optional: Manually access device logs](/versions/v7.0.0/guides/logging#optional-manually-access-device-logs)
-   [Debugging](/versions/v7.0.0/guides/debugging)
    -   [Using a Simulator / Emulator](/versions/v7.0.0/guides/debugging#using-a-simulator-emulator)
    -   [Debugging Javascript](/versions/v7.0.0/guides/debugging#debugging-javascript)
    -   [Debugging HTTP](/versions/v7.0.0/guides/debugging#debugging-http)
    -   [Hot Reloading and Live Reloading](/versions/v7.0.0/guides/debugging#hot-reloading-and-live-reloading)
-   [Icons](/versions/v7.0.0/guides/icons)
    -   [@exponent/vector-icons](/versions/v7.0.0/guides/icons#exponent-vector-icons)
    -   [Icon images](/versions/v7.0.0/guides/icons#icon-images)
-   [Using Custom Fonts](/versions/v7.0.0/guides/using-custom-fonts)
    -   [Starting code](/versions/v7.0.0/guides/using-custom-fonts#starting-code)
    -   [Downloading the font](/versions/v7.0.0/guides/using-custom-fonts#downloading-the-font)
    -   [Loading the font in your app](/versions/v7.0.0/guides/using-custom-fonts#loading-the-font-in-your-app)
    -   [Using the font in a `Text` component](/versions/v7.0.0/guides/using-custom-fonts#using-the-font-in-a-text-component)
    -   [Waiting for the font to load before rendering](/versions/v7.0.0/guides/using-custom-fonts#waiting-for-the-font-to-load-before-rendering)
-   [Push Notifications](/versions/v7.0.0/guides/push-notifications)
    -   [1. Save the user's Exponent Push Token on your server](/versions/v7.0.0/guides/push-notifications#save-the-user-s-exponent-push-token-on-your-server)
    -   [2. Call Exponent's Push API with the user's token](/versions/v7.0.0/guides/push-notifications#call-exponent-s-push-api-with-the-user-s-token)
    -   [3. Handle receiving and/or selecting the notification](/versions/v7.0.0/guides/push-notifications#handle-receiving-and-or-selecting-the-notification)
-   [Building Standalone Apps](/versions/v7.0.0/guides/building-standalone-apps)
    -   [1. Install exp](/versions/v7.0.0/guides/building-standalone-apps#install-exp)
    -   [2. Configure exp.json](/versions/v7.0.0/guides/building-standalone-apps#configure-exp-json)
    -   [3. Start the build](/versions/v7.0.0/guides/building-standalone-apps#start-the-build)
    -   [4. Wait for it to finish building](/versions/v7.0.0/guides/building-standalone-apps#wait-for-it-to-finish-building)
    -   [5. Test it on your device or simulator](/versions/v7.0.0/guides/building-standalone-apps#test-it-on-your-device-or-simulator)
    -   [6. Submit it to the appropriate store](/versions/v7.0.0/guides/building-standalone-apps#submit-it-to-the-appropriate-store)
-   [Upgrading Exponent](/versions/v7.0.0/guides/upgrading-exponent)
