docs/versions/v10.0.0/guides/index.md
---
title: Guides
old_permalink: /versions/v10.0.0/guides/index.html
previous___FILE: ./../introduction/faq.md
next___FILE: ./up-and-running.md
---

-   [Up and Running](up-and-running.html)
    -   [Create an account](up-and-running.html#create-an-account)
    -   [Creating the project](up-and-running.html#creating-the-project)
    -   [Open the app on your phone or simulator](up-and-running.html#open-the-app-on-your-phone-or-simulator)
    -   [Making your first change](up-and-running.html#making-your-first-change)
-   [Development Mode](development-mode.html)
    -   [Toggling Development Mode in XDE](development-mode.html#toggling-development-mode-in-xde)
-   [Configuration with exp.json](configuration.html)
-   [Viewing Logs](logging.html)
    -   [Recommended: View logs with Exponent tools](logging.html#recommended-view-logs-with-exponent-tools)
    -   [Optional: Manually access device logs](logging.html#optional-manually-access-device-logs)
-   [Debugging](debugging.html)
    -   [Using a Simulator / Emulator](debugging.html#using-a-simulator-emulator)
    -   [Debugging Javascript](debugging.html#debugging-javascript)
    -   [Debugging HTTP](debugging.html#debugging-http)
    -   [Hot Reloading and Live Reloading](debugging.html#hot-reloading-and-live-reloading)
-   [Assets](assets.html)
    -   [Where assets live](assets.html#where-assets-live)
    -   [Preloading & caching assets](assets.html#preloading-caching-assets)
-   [Icons](icons.html)
    -   [@exponent/vector-icons](icons.html#exponent-vector-icons)
    -   [Icon images](icons.html#icon-images)
-   [Using Custom Fonts](using-custom-fonts.html)
    -   [Starting code](using-custom-fonts.html#starting-code)
    -   [Downloading the font](using-custom-fonts.html#downloading-the-font)
    -   [Loading the font in your app](using-custom-fonts.html#loading-the-font-in-your-app)
    -   [Using the font in a `Text` component](using-custom-fonts.html#using-the-font-in-a-text-component)
    -   [Waiting for the font to load before rendering](using-custom-fonts.html#waiting-for-the-font-to-load-before-rendering)
-   [Push Notifications](push-notifications.html)
    -   [1. Save the user's Exponent Push Token on your server](push-notifications.html#save-the-user-s-exponent-push-token-on-your-server)
    -   [2. Call Exponent's Push API with the user's token](push-notifications.html#call-exponent-s-push-api-with-the-user-s-token)
    -   [3. Handle receiving and/or selecting the notification](push-notifications.html#handle-receiving-and-or-selecting-the-notification)
-   [Building Standalone Apps](building-standalone-apps.html)
    -   [1. Install exp](building-standalone-apps.html#install-exp)
    -   [2. Configure exp.json](building-standalone-apps.html#configure-exp-json)
    -   [3. Start the build](building-standalone-apps.html#start-the-build)
    -   [4. Wait for it to finish building](building-standalone-apps.html#wait-for-it-to-finish-building)
    -   [5. Test it on your device or simulator](building-standalone-apps.html#test-it-on-your-device-or-simulator)
    -   [6. Submit it to the appropriate store](building-standalone-apps.html#submit-it-to-the-appropriate-store)
    -   [7. Update your app](building-standalone-apps.html#update-your-app)
-   [How Exponent Works](how-exponent-works.html)
    -   [Serving an Exponent project for local development](how-exponent-works.html#serving-an-exponent-project-for-local-development)
    -   [Publishing/Deploying an Exponent app in Production](how-exponent-works.html#publishing-deploying-an-exponent-app-in-production)
    -   [SDK Versions](how-exponent-works.html#sdk-versions)
    -   [Opening a deployed Exponent app](how-exponent-works.html#opening-a-deployed-exponent-app)
    -   [Opening Exponent Apps Offline](how-exponent-works.html#opening-exponent-apps-offline)
    -   [Standalone Apps](how-exponent-works.html#standalone-apps)
-   [Upgrading Exponent](upgrading-exponent.html)
